--- a/book.toml
+++ b/book.toml
@@ -3,7 +3,7 @@ authors = []
 language = "en"
 multilingual = false
 src = "src"
-title = "Course Name"
+title = "Introduction to Data Science"
 
 [build]
 build-dir = "output"
