--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,13 +3,15 @@ on:
   push:
     branches:
       - main
-      - anchor-config
+      - draft
   workflow_dispatch:
 
 env:
-  API_KEY: "${{ secrets.API_KEY }}"
-  API_URL: https://develop.api.kibo.school
-  REPO_PATH: kiboschool/course-intro-to-data-science
+  PROD_ANCHOR_API_KEY: "${{ secrets.PROD_ANCHOR_API_KEY }}"
+  PROD_ANCHOR_BASE_URL: "${{ secrets.PROD_ANCHOR_BASE_URL }}"
+  DEV_ANCHOR_API_KEY: "${{ secrets.DEV_ANCHOR_API_KEY }}"
+  DEV_ANCHOR_BASE_URL: "${{ secrets.DEV_ANCHOR_BASE_URL }}"
+
 jobs:
   deploy:
     name: publish
@@ -18,8 +20,16 @@ jobs:
       contents: "read"
       id-token: "write"
     steps:
-      - uses: actions/checkout@v2
-
       - name: publish
         run: |
-          curl --request PUT --url $API_URL/api/latest/courses -H 'Authorization: SharedKey $API_KEY' -H 'Content-Type: application/json' --data '{"github_path": "'"$REPO_PATH"'"}'
+          if [[ ${GITHUB_REF} == "refs/heads/main" ]]; then
+            export ANCHOR_API_KEY=${PROD_ANCHOR_API_KEY} 
+            export ANCHOR_BASE_URL=${PROD_ANCHOR_BASE_URL}
+          fi
+
+          if [[ ${GITHUB_REF} == "refs/heads/draft" ]]; then
+            export ANCHOR_API_KEY=${DEV_ANCHOR_API_KEY} 
+            export ANCHOR_BASE_URL=${DEV_ANCHOR_BASE_URL}
+          fi
+
+          curl --request POST --url $ANCHOR_BASE_URL/api/latest/courses/update -H "Authorization: SharedKey $ANCHOR_API_KEY" -H 'Content-Type: application/json' --data "{\"github_path\": \"$GITHUB_REPOSITORY\"}"
